--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "1.0.4",
+    "@angular/compiler-cli": "^4.0.0",
     "@angular/animations": "^4.1.3",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
@@ -28,8 +31,7 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.4",
-    "@angular/compiler-cli": "^4.0.0",
+
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "api-ai-javascript": "^2.0.0-beta.20",
@@ -46,5 +48,9 @@
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
     "typescript": "~2.2.0"
+  },
+    "engines": {
+    "node": "6.9.2",
+    "npm": "3.10.9"
   }
 }
