--- a/package.json
+++ b/package.json
@@ -4,18 +4,14 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.0.4",
-    "@angular/compiler-cli": "^4.0.0",
-    "api-ai-javascript": "^2.0.0-beta.20",
     "@angular/animations": "^4.1.3",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
@@ -32,10 +28,11 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-
+    "@angular/cli": "1.0.4",
+    "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
-    
+    "api-ai-javascript": "^2.0.0-beta.20",
     "codelyzer": "~2.0.0",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
@@ -49,9 +46,6 @@
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
     "typescript": "~2.2.0"
-  },
-    "engines": {
-    "node": "6.9.2",
-    "npm": "3.10.9"
   }
+  
 }
